# BehiveSyncService

./: LICENSE  README.md
Beehive/: CMakeLists.txt
Beehive/include/concurrency/: SleepyWorker.hpp  spinlock.hpp
Beehive/include/config/: Context.hpp  Entity.hpp  Module.hpp  Role.hpp  Transaction.hpp
Beehive/include/crypto/: Crypto.hpp  base64.h  picojson.h
Beehive/include/dao/: ChangeDAO.hpp  DatasetDAO.hpp  DownloadedDAO.hpp  EntityDAO.hpp  HeaderDAO.hpp  MemberDAO.hpp  NodeDAO.hpp  PushDAO.hpp  Storage.hpp  UserDAO.hpp
Beehive/include/entities/: Change.hpp  Dataset.hpp  Developer.hpp  Header.hpp  KeyData.hpp  Member.hpp  Node.hpp  Push.hpp  User.hpp
Beehive/include/fcgi/: FcgiHandler.hpp
Beehive/include/json/: Common.hpp
Beehive/include/nanolog/: NanoLog.hpp
Beehive/include/services/: DatasetService.hpp  InboundHTTP.hpp  InboundTCP.hpp  OutboundHTTP.hpp  SchemaService.hpp  ServiceException.hpp  StorageService.hpp  UserService.hpp
Beehive/include/sol/: optional_implementation.hpp
Beehive/include/sqlite/: BinaryDecoder.hpp  BinaryEncoder.hpp  DecoderException.hpp  TextDecoder.hpp  TextEncoder.hpp  Types.hpp
Beehive/include/string/: ICaseMap.hpp
Beehive/include/tcp/: SocketWatcher.hpp  TCPException.hpp  TCPHandler.hpp
Beehive/include/validation/: TransactionsManager.hpp  Validator.hpp
Beehive/src/: main.cpp
Beehive/src/crypto/: Crypto.cpp  base64.cpp
Beehive/src/dao/: ChangeDAO.cpp  DatasetDAO.cpp  DownloadedDAO.cpp  EntityDAO.cpp  HeaderDAO.cpp  MemberDAO.cpp  NodeDAO.cpp  PushDAO.cpp  Storage.cpp  UserDAO.cpp
Beehive/src/fcgi/: FcgiHandler.cpp
Beehive/src/nanolog/: NanoLog.cpp
Beehive/src/services/: DatasetService.cpp  InboundHTTP.cpp  InboundTCP.cpp  OutboundHTTP.cpp  SchemaService.cpp  StorageService.cpp  UserService.cpp
Beehive/src/sqlite/: BinaryDecoder.cpp  BinaryEncoder.cpp  TextDecoder.cpp  TextEncoder.cpp
Beehive/src/string/: ICaseMap.cpp
Beehive/src/tcp/: SocketWatcher.cpp  TCPHandler.cpp
Beehive/src/validation/: TransactionsManager.cpp
SyncService/: .cproject  .project  dep.sh
SyncService/src/: SyncServerApp.cpp
SyncService/src/lib/nanolog/: NanoLog.cpp  NanoLog.hpp
SyncService/src/servers/: AdminHandler.cpp  AdminHandler.h  BinSyncHandler.cpp  BinSyncHandler.h  HttpSyncHandler.cpp  HttpSyncHandler.h
SyncService/src/servers/lib/concurrency/: spinlock.h
SyncService/src/servers/lib/fcgi/: FcgiHandler.cpp  FcgiHandler.h
SyncService/src/servers/lib/sqlite/: sqlite3.h
SyncService/src/servers/lib/tcp/: SocketWatcher.cpp  SocketWatcher.h  TCPException.h  TCPHandler.cpp  TCPHandler.h
SyncService/src/servers/services/: DatasetService.cpp  DatasetService.h  SchemaService.cpp  SchemaService.h  ServiceException.h  StorageService.cpp  StorageService.h  UserService.cpp  UserService.h
SyncService/src/servers/services/config/: Application.h  Bootstrap.h  Common.h  Config.cpp  Config.h  Entity.h  Module.h  Role.h  Transaction.h
SyncService/src/servers/services/dao/: ChangeDAO.cpp  ChangeDAO.h  ConfigDAO.cpp  ConfigDAO.h  DatasetDAO.cpp  DatasetDAO.h  DownloadedDAO.cpp  DownloadedDAO.h  EntityDAO.cpp  EntityDAO.h  HeaderDAO.cpp  HeaderDAO.h  MemberDAO.cpp  MemberDAO.h  NodeDAO.cpp  NodeDAO.h  PushDAO.cpp  PushDAO.h  SchemaDAO.cpp  SchemaDAO.h  UserDAO.cpp  UserDAO.h
SyncService/src/servers/services/dao/sql/: Connection.cpp  Connection.h  ConnectionPool.h  PreparedResultSet.cpp  PreparedResultSet.h  PreparedStatement.cpp  PreparedStatement.h  ResultSet.h  SQLException.h  Statement.h  StaticResultSet.cpp  StaticResultSet.h  StaticStatement.cpp  StaticStatement.h
SyncService/src/servers/services/entities/: Change.h  Dataset.h  Header.h  KeyData.h  Member.h  Node.h  Push.h  User.h
SyncService/src/servers/services/lib/crypto/: Crypto.cpp  Crypto.h  jwt.h
SyncService/src/servers/services/lib/sqlite/: BinaryDecoder.cpp  BinaryDecoder.h  BinaryEncoder.cpp  BinaryEncoder.h  DecoderException.h  TextDecoder.cpp  TextDecoder.h  TextEncoder.cpp  TextEncoder.h  Types.h
SyncService/src/servers/services/lib/string/: ICaseMap.cpp  ICaseMap.h
SyncService/src/servers/services/lib/validation/: TransactionsManager.cpp  TransactionsManager.h  Validator.h
